resized the conclusion box for better page visibility. fixed an issue causing the bottom row of divs on battlepage to not line up properly with the above row. a new enemy insult now generates with every new enemy.

--- a/style/style.css
+++ b/style/style.css
@@ -120,7 +120,3 @@
     font-size: 1.5vw;
 }
 
-.Score {
-    padding: 0;
-    margin: 0;
-}
